=================
Changes for crash
=================

Unreleased
==========


2024/01/12 0.30.2
=================

- Added support for setting an external pager via ``\pager <executable>``

- Added ROLE keyword for autocomplete & autocapitalize

2023/11/23 0.30.1
=================

- Added support for Python 3.12.
- Added possible output format choices for ``--format`` argument to
  ``crash --help``. Thanks, @mfussenegger.

2023/07/06 0.30.0
=================

- Fix inconsistent spacing around printed runtime. Thank you, @hammerhead.

- Add support for multi-line input of commands and SQL statements for both
  copy-pasting inside the crash shell and input pipes into crash.

2023/02/16 0.29.0
=================

- Add support for Python 3.11, and drop support for Python 3.5 and 3.6.

- Fix compatibility issue with ``crate-0.30.0`` in the area of comparing
  server version numbers.

- Dependencies: Update to tabulate 0.9, platformdirs, and prompt-toolkit v3.

2022/04/13 0.28.0
=================

- Added support for Python 3.10.

- Fixed tabular output with rows containing only whitespace or other
  non-printable characters by upgrading to upstream ``tabulate`` package.

2021/01/20 0.27.0
=================

- Added support for Python 3.9.

- Upgraded the CrateDB python driver to 0.26.0 in order to enable TCP keepalive
  on the socket level.

- Made ctrl-d only quit program on empty command line, like any other shell.

2020/09/21 0.26.0
=================

- Fixed issue where cancelling a ctrl-r search would not return focus.

- Added feature to dynamically load keywords (for syntax highlighting) from
  ``pg_catalog.pg_get_keywords()``.

2020/03/04 0.25.0
=================

- Added the cluster name to the status bar.

- Sort the output of the ``\dt`` (show tables) command alphabetically.

- Improved the color scheme for the SQL syntax hightlighing.

- Dropped support for Python 3.4 and added official support for Python 3.7 and
  Python 3.8.

2018/10/04 0.24.2