@@ -4,7 +4,10 @@ Changes for crash
 
 Unreleased
 ==========
-
+- Added command-line argument ``--timeout``, to configure network timeout
+  values in seconds. The default connect timeout is five seconds now,
+  the default read timeout is the default setting of the ``socket`` module,
+  which is "infinite" by default.
 
 2024/01/12 0.30.2
 =================
